<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ongoing_call_layout"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_status_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="24dp" />

    <TextView
        android:id="@+id/text_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_status_bar"
        tools:text="00:00"
        android:visibility="invisible"/>


    <!-- Caller Image -->

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/text_caller"
        app:layout_constraintEnd_toEndOf="@+id/text_caller"
        app:layout_constraintStart_toStartOf="@+id/text_caller"
        app:layout_constraintTop_toBottomOf="@+id/text_stop">

        <ImageView
            android:id="@+id/image_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/caler_image_desc"

            app:srcCompat="@drawable/ic_account_circle_black_24dp" />


    </FrameLayout>

    <!--    caller name-->

    <TextView
        android:id="@+id/text_caller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/number_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Jesus" />


    <!-- Caller Number and Status -->
    <LinearLayout
        android:id="@+id/number_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintBottom_toTopOf="@+id/guide_eye_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_caller">

        <TextView
            android:id="@+id/text_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:padding="5dp"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="0201478523" />

        <TextView
            android:id="@+id/text_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="?attr/colorAccent"
            android:padding="5dp"
            tools:text="Dailing" />


    </LinearLayout>

    <!--    timer-->
    <TextView
        android:id="@+id/text_stopwatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guide_eye_level"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_status"
        tools:text="00:00" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_eye_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <!-- Hold -->
    <ImageView
        android:id="@+id/button_hold"
        android:layout_width="64dp"
        android:layout_height="62dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_add_call"
        app:layout_constraintEnd_toStartOf="@+id/button_speaker"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_mute"
        app:layout_constraintTop_toTopOf="@+id/guide_eye_level"
        app:layout_constraintVertical_bias="0.32999998"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_pause_circle_outline_black_24dp"
        android:contentDescription="@string/pause_call_desc"/>

    <!-- Mute Button -->
    <ImageView
        android:id="@+id/button_mute"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_hold"
        app:layout_constraintEnd_toStartOf="@+id/button_hold"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_hold"
        app:srcCompat="@drawable/ic_mic_off_black_24dp"
        android:contentDescription="@string/mute_bottom_desc"
        />

    <!-- Speaker Button -->
    <ImageView
        android:id="@+id/button_speaker"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_hold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_hold"
        app:layout_constraintTop_toTopOf="@+id/button_hold"
        app:srcCompat="@drawable/ic_volume_up_black_24dp"
        android:contentDescription="@string/loud_speaker_desc"
         />

    <!-- Keypad Button -->

    <ImageView
        android:id="@+id/button_keypad"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="76dp"
        android:layout_weight="1"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/keypad_desc"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_call"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_add_call"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_dialpad_black_24dp"
         />

    <!-- Add Call Button -->
    <ImageView
        android:id="@+id/button_add_call"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/add_call_desc"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintRight_toLeftOf="@id/button_video_call"
        app:layout_constraintStart_toEndOf="@+id/button_keypad"
        app:layout_constraintTop_toBottomOf="@+id/button_hold"
        app:srcCompat="@drawable/ic_add_black_24dp"
         />

    <!-- video -->
    <ImageView
        android:id="@+id/button_video_call"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ripple_oval"
        android:clickable="true"
        android:contentDescription="@string/add_call_desc"
        android:focusable="true"
        android:padding="16dp"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_add_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/button_add_call"
        app:layout_constraintTop_toTopOf="@+id/button_add_call"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_video_call_black_24dp"
        />

    <!--    Answer Button-->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/answer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="center"
        android:src="@drawable/ic_call_black_24dp"
        app:backgroundTint="@color/white"
        app:fabCustomSize="72dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="36dp"/>

    <!-- Reject Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/reject_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:scaleType="center"
        android:src="@drawable/ic_call_end_black_24dp"
        app:backgroundTint="@color/white"
        app:fabCustomSize="72dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="36dp" />


</androidx.constraintlayout.widget.ConstraintLayout>